--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <img src="profile-picture.jpg" alt="Profile Picture" class="profile-picture">
   <h1 class="name">John Doe</h1>
   <h2 class="title">Software Engineer</h2>
-  <p class="description">John is a highly skilled software engineer with experience in both front-end and back-end development. He is proficient in several programming languages including Java, Python, and JavaScript. John is also experienced in working with a variety of frameworks and libraries such as React, Angular, and Node.js. He is a quick learner and is always eager to take on new challenges.</p>
+  <p class="description">Koshish Rijal highly skilled software engineer with experience in  back-end development. He is proficient in several programming languages including Java,  JavaScript, sql. John is also experienced in working with a variety of frameworks and libraries such as Spring,Spring boot, Angular, and Node.js. He is a quick learner and is always eager to take on new challenges.</p>
   <div class="social-links">
-    <a href="https://www.linkedin.com/in/john-doe/" target="_blank">LinkedIn</a>
-    <a href="https://github.com/johndoe" target="_blank">GitHub</a>
+    <a href="https://www.linkedin.com/in/koshish-rijal-861a79113/" target="_blank">LinkedIn</a>
+    <a href="https://github.com/koshishrijal" target="_blank">GitHub</a>
   </div>
 </div>
 
