--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="mainstyle.css">
+<link rel="stylesheet" href="./mainstyle.css">
 <title>Koshish Rijal</title>
 </head>
 <body>
 
 <div class="bio-container">
-  <img src="profile-picture.jpg" alt="Profile Picture" class="profile-picture">
+  <img src="./profile-picture.jpg" alt="Profile Picture" class="profile-picture">
   <h1 class="name">John Doe</h1>
   <h2 class="title">Software Engineer</h2>
   <p class="description">Koshish Rijal highly skilled software engineer with experience in  back-end development. He is proficient in several programming languages including Java,  JavaScript, sql. John is also experienced in working with a variety of frameworks and libraries such as Spring,Spring boot, Angular, and Node.js. He is a quick learner and is always eager to take on new challenges.</p>
