--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 <div class="bio-container">
   <img src="./profile-picture.jpg" alt="Profile Picture" class="profile-picture">
-  <h1 class="name">John Doe</h1>
-  <h2 class="title">Software Engineer</h2>
-  <p class="description">Koshish Rijal highly skilled software engineer with experience in  back-end development. He is proficient in several programming languages including Java,  JavaScript, sql. John is also experienced in working with a variety of frameworks and libraries such as Spring,Spring boot, Angular, and Node.js. He is a quick learner and is always eager to take on new challenges.</p>
+  <h1 class="name">Koshish Rijal</h1>
+  <h2 class="title">Software Engineer(java)</h2>
+  <p class="description">I am highly skilled software engineer with experience in  back-end development. I am proficient in several programming languages including Java,  JavaScript, sql. I am also experienced in working with a variety of frameworks and libraries such as Spring,Spring boot, Angular, and Node.js. I also have experience with cloud services like aws ec2, s3, ses, rds, route53. I am a quick learner and is always eager to take on new challenges.</p>
   <div class="social-links">
     <a href="https://www.linkedin.com/in/koshish-rijal-861a79113/" target="_blank">LinkedIn</a>
     <a href="https://github.com/koshishrijal" target="_blank">GitHub</a>
